--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,8 +9,8 @@
     <version>1</version>
   </parent>
   <groupId>com.google.protobuf</groupId>
-  <artifactId>protobuf-java</artifactId>
-  <version>2.6.1+c42.1</version>
+  <artifactId>code42-protobuf-java</artifactId>
+  <version>2.7.0</version>
   <packaging>bundle</packaging>
   <name>Protocol Buffer Java API</name>
   <description>
@@ -148,7 +148,7 @@
           <instructions>
             <Bundle-DocURL>https://developers.google.com/protocol-buffers/</Bundle-DocURL>
             <Bundle-SymbolicName>com.google.protobuf</Bundle-SymbolicName>
-            <Export-Package>com.google.protobuf;version=2.6.1+c42.1</Export-Package>
+            <Export-Package>com.google.protobuf;version=2.7.0</Export-Package>
           </instructions>
         </configuration>
       </plugin>
